--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,21 @@
   "author": "Mac Deluca",
   "license": "ISC",
   "main": "server.ts",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "swc src --out-dir dist",
+    "start": "node dist/src/server.js",
+    "dev": "nodemon --watch src --ext ts --exec 'npm run build && npm start'"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.12",
+    "nodemon": "^3.1.4"
   }
 }
