--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "knex": "^3.1.0",
+    "pg": "^8.12.0",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
