feat: swc correctly transpiling typescript code + docker container for api

--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,7 @@
   "description": "API for recipehub application.",
   "author": "Mac Deluca",
   "license": "ISC",
-  "main": "server.ts",
-  "type": "module",
+  "main": "server.js",
   "scripts": {
     "build": "swc src --out-dir dist",
     "start": "node dist/src/server.js",
