--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,8 @@ services:
         - DB_USER_API_PASSWORD=${DB_USER_API_PASSWORD}
         - API_PORT=${API_PORT}
       volumes:
-        - /opt/database/node_modules # prevents local node_modules overriding container node_modules
+        - ./api:/opt/api
+        - /opt/api/node_modules # prevents local node_modules overriding container node_modules
       networks:
         - recipehub-network
       command: ['npm', 'run', 'dev']
