--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "knex": "^3.1.0",
     "pg": "^8.12.0",
+    "sql-template-tag": "^5.2.1",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
