--- a/api/package.json
+++ b/api/package.json
@@ -5,10 +5,13 @@
   "author": "Mac Deluca",
   "license": "ISC",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "build": "swc src --out-dir dist",
-    "start": "node dist/src/server.js",
-    "dev": "nodemon --watch src --ext ts --exec 'npm run build && npm start'"
+    "build": "swc src --out-dir build",
+    "start": "node build/src/server.js",
+    "dev": "nodemon --watch src --ext ts --exec 'npm run build && npm start'",
+    "format:check": "prettier src --check",
+    "format:fix": "prettier src --write"
   },
   "dependencies": {
     "express": "^4.19.2",
@@ -18,10 +21,18 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@swc/cli": "^0.4.0",
     "@swc/core": "^1.7.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.12",
-    "nodemon": "^3.1.4"
+    "eslint": "^9.8.0",
+    "globals": "^15.8.0",
+    "nodemon": "^3.1.4",
+    "prettier": "3.3.3",
+    "typescript-eslint": "^7.17.0"
+  },
+  "overrides": {
+    "eslint": "^9.8.0"
   }
 }
