--- a/api/package.json
+++ b/api/package.json
@@ -21,18 +21,11 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
     "@swc/cli": "^0.4.0",
     "@swc/core": "^1.7.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.12",
-    "eslint": "^9.8.0",
-    "globals": "^15.8.0",
     "nodemon": "^3.1.4",
-    "prettier": "3.3.3",
-    "typescript-eslint": "^7.17.0"
-  },
-  "overrides": {
-    "eslint": "^9.8.0"
+    "prettier": "^3.3.3"
   }
 }
