--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.12",
     "nodemon": "^3.1.4",
-    "prettier": "^3.3.3"
+    "prettier": "^2.8.8",
+    "prettier-plugin-organize-imports": "^3.2.4"
   }
 }
