--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,9 @@
     "format:fix": "prettier src --write"
   },
   "dependencies": {
+    "@types/express-openapi": "^1.9.0",
     "express": "^4.19.2",
+    "express-openapi": "^12.1.3",
     "knex": "^3.1.0",
     "pg": "^8.12.0",
     "sql-template-tag": "^5.2.1",
