--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
       build:
         context: ./api
         dockerfile: ./.docker/Dockerfile.api
+      ports:
+        - ${API_PORT}:${API_PORT}
       environment:
         - NODE_ENV=${NODE_ENV}
         - DB_HOST=${DB_HOST}
