--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       container_name: ${DOCKER_PROJECT_NAME}-api-container
       build:
         context: ./apiV2
-        dockerfile: ./.docker/Dockerfile.api
+        dockerfile: ./.docker/Dockerfile.api.dev
       environment:
         - NODE_ENV=${NODE_ENV}
         - API_PORT=${API_PORT}
@@ -69,6 +69,7 @@ services:
         - ./apiV2:/opt/api
       networks:
         - recipehub-network
+      command: 'air --build.cmd "go build -o bin/api" --build.bin "./bin/api"'
 
 networks:
   recipehub-network:
