--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
       build:
         context: ./apiV2
         dockerfile: ./.docker/Dockerfile.api.dev
+      ports:
+        - ${API_PORT}:${API_PORT}
       environment:
         - NODE_ENV=${NODE_ENV}
         - API_PORT=${API_PORT}
