--- a/database/package.json
+++ b/database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recipehub/database",
+  "name": "recipevault/database",
   "version": "1.0.0",
   "description": "Database Service",
   "author": "Mac Deluca",
