--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_USER=${DB_USER}
     networks:
-      - recipehub-network
+      - recipevault-network
     volumes:
       - postgres:/var/lib/postgresql/data
 
@@ -45,7 +45,7 @@ services:
       volumes:
         - /opt/database/node_modules # prevents local node_modules overriding container node_modules
       networks:
-        - recipehub-network
+        - recipevault-network
       depends_on:
         db:
           condition: service_healthy
@@ -70,7 +70,7 @@ services:
       volumes:
         - ./apiV2:/opt/api
       networks:
-        - recipehub-network
+        - recipevault-network
       depends_on:
         migrations:
           condition: service_started
@@ -78,7 +78,7 @@ services:
       command: 'air --build.cmd "go build -o bin/api" --build.bin "./bin/api"'
 
 networks:
-  recipehub-network:
+  recipevault-network:
     driver: bridge
 
 volumes:
