--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       image: ${DOCKER_PROJECT_NAME}-api-img
       container_name: ${DOCKER_PROJECT_NAME}-api-container
       build:
-        context: ./apiV2
+        context: ./api
         dockerfile: ./.docker/Dockerfile.api.dev
       ports:
         - ${API_PORT}:${API_PORT}
@@ -68,7 +68,7 @@ services:
         - DB_USER_API=${DB_USER_API}
         - DB_USER_API_PASSWORD=${DB_USER_API_PASSWORD}
       volumes:
-        - ./apiV2:/opt/api
+        - ./api:/opt/api
       networks:
         - recipevault-network
       depends_on:
