--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -3,8 +3,11 @@ on: [push]
 jobs:
   go-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./app
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Running go tests
-        run: cd ./api  && go test -v ./...
+        run: go test -v ./...
