--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./api
+        working-directory: ./backend
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
