fix: attempting to fix broken go linter

--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: stable
+          cache: true
+          cache-dependency-path: **/go.sum
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
