--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           go-version: stable
           cache: true
-          cache-dependency-path: **/go.sum
+          cache-dependency-path: '**/go.sum'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
