--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -16,7 +16,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: stable
+          go-version: 1.22.5
+          cache: true
+          cache-dependency-path: '**/go.sum'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
