--- a/compose.yml
+++ b/compose.yml
@@ -1,9 +1,7 @@
-version: "3.5"
-
 services:
   # Postgres database service
   # TODO: update db service to user golang backend
-  db:
+  recipevault-db:
     image: ${DOCKER_PROJECT_NAME}-db-img
     container_name: ${DOCKER_PROJECT_NAME}-db-container
     build:
@@ -28,7 +26,7 @@ services:
       - postgres:/var/lib/postgresql/data
 
   # Postgres database migration/seed service
-  migrations:
+  recipevault-migrations:
       image: ${DOCKER_PROJECT_NAME}-migrations-img
       container_name: ${DOCKER_PROJECT_NAME}-migrations-container
       build:
@@ -48,11 +46,11 @@ services:
       networks:
         - recipevault-network
       depends_on:
-        db:
+        recipevault-db:
           condition: service_healthy
 
   # API service
-  api:
+  recipevault-api:
       image: ${DOCKER_PROJECT_NAME}-api-img
       container_name: ${DOCKER_PROJECT_NAME}-api-container
       build:
@@ -61,7 +59,7 @@ services:
       ports:
         - ${API_PORT}:${API_PORT}
       environment:
-        - NODE_ENV=${NODE_ENV}
+        - APP_ENV=${NODE_ENV}
         - API_PORT=${API_PORT}
         - DB_HOST=${DB_HOST}
         - DB_PORT=${DB_PORT}
@@ -73,10 +71,29 @@ services:
       networks:
         - recipevault-network
       depends_on:
-        migrations:
+        recipevault-migrations:
           condition: service_started
 
       command: 'air --build.cmd "go build -o bin/backend cmd/api/main.go" --build.bin "./bin/backend"'
+
+  # APP service
+  recipevault-app:
+      image: ${DOCKER_PROJECT_NAME}-app-img
+      container_name: ${DOCKER_PROJECT_NAME}-app-container
+      build:
+        context: ./app
+        dockerfile: ./.docker/Dockerfile.app.dev
+      ports:
+        - ${APP_PORT}:${APP_PORT}
+      environment:
+        - NODE_ENV=${NODE_ENV}
+        - VITE_APP_PORT=${APP_PORT}
+        - VITE_API_URL=${API_URL}
+      volumes:
+        - ./app:/opt/app
+        - /opt/app/node_modules # prevents local node_modules overriding container node_modules
+      networks:
+        - recipevault-network
 
 networks:
   recipevault-network:
